# cf

./: .gitignore  pyproject.toml
backend/be-api/: README.md  alembic.ini  go.mod  go.sum  pyproject.toml
backend/be-api-py/: README.md  pyproject.toml
backend/be-api-py/src/cf_be_api/: __init__.py
backend/be-api-py/src/cf_be_api/domain/: errors.py  intensifier_lexicon.py  models.py
backend/be-api-py/src/cf_be_api/ports/: geocode.py  source.py
backend/be-api-py/src/cf_be_api/usecases/: compute_marks.py  extract_review_signals.py  rebuild_graph.py
backend/be-api-py/tests/contract/extract/: test_keybert.py
backend/be-api-py/tests/contract/repo/: test_camp_contract.py
backend/be-api-py/tests/integration/: conftest.py
backend/be-api-py/tests/unit/usecases/: test_discover_themes.py  test_eta_for_fleet.py  test_extract_desc_signals.py  test_extract_review_signals.py  test_rebuild_graph.py
backend/be-api/alembic/versions/: 0003_camp_detail_url.py
backend/be-api/cmd/be-api/: main.go
backend/be-api/internal/api/: concepts.go  eta.go  facets.go  featured_axes.go  graph.go  graph_helpers_test.go  healthz_test.go  marks.go  sites.go  sites_detail.go  sites_search.go  themes.go
backend/be-api/internal/domain/: concept_seeds.go  errors.go  featured_axes.go  featured_axes_test.go
backend/be-api/internal/ports/: concept_repo.go  embed.go  eta.go  facets_repo.go  geocode.go  graph.go  mark_repo.go  repo.go  source.go  theme_repo.go
backend/be-api/internal/settings/: config.go
backend/be-api/internal/usecases/: eta_for_fleet.go  eta_for_fleet_test.go  get_site_detail.go  list_camps.go  list_concepts.go  list_facets.go  list_marks.go  list_themes.go  rebuild_graph.go  reembed.go  semantic_search.go
backend/be-api/src/cf_be_api/: api.py  settings.py
backend/be-api/tests/: test_graph_api.py
backend/be-api/tests/cross_validation/: sites_search_test.go
backend/be-api/tests/regression/: endpoints_test.go
backend/be-api/tests/unit/: test_camping_filter.py  test_domain_models.py  test_intensifier_lexicon.py
backend/be-for-fe/: README.md  pyproject.toml
backend/be-for-fe/src/cf_be_for_fe/: __init__.py  api.py  client.py  constants.py  projection.py  settings.py
backend/be-for-fe/tests/: test_eta_passthrough.py  test_passthrough.py  test_projection_unit.py  test_root_redirect.py  test_sites_projection.py
camfit-puller/: .gitignore  README.md  pyproject.toml
camfit-puller/alembic/: env.py
camfit-puller/alembic/versions/: 0001_initial.py  0002_marks.py
camfit-puller/scripts/: derive_lexicon.py  migrate_to_pg.py  seed_concepts.py  seed_filter_mapping.py
camfit-puller/src/camfit_puller/: api.py  cli.py  cli_pipeline_legacy.py  container.py  settings.py
camfit-puller/src/camfit_puller/adapters/: etago_bin.py
camfit-puller/src/camfit_puller/domain/: concept_seeds.py  embed_text.py  featured_axes.py  models.py
camfit-puller/src/camfit_puller/ports/: extract.py  geocode.py  graph.py  repo.py  vector.py
camfit-puller/src/camfit_puller/usecases/: build_vocabulary.py  compute_marks.py  eta_for_fleet.py  extract_desc_signals.py  extract_filter_signals.py  geocode_pending.py
camfit-puller/tests/: test_graph_api.py
camfit-puller/tests/contract/embed/: test_embedder_contract.py
camfit-puller/tests/contract/extract/: test_keybert.py
camfit-puller/tests/contract/repo/: test_camp_contract.py
camfit-puller/tests/contract/vector/: test_index_contract.py
camfit-puller/tests/integration/: conftest.py  test_full_pipeline.py
camfit-puller/tests/unit/: test_domain_models.py  test_embed_text.py  test_intensifier_lexicon.py
camfit-puller/tests/unit/adapters/: test_negation.py
camfit-puller/tests/unit/usecases/: test_build_embeddings.py  test_build_vocabulary.py  test_compute_marks.py  test_discover_themes.py  test_eta_for_fleet.py  test_extract_desc_signals.py  test_extract_filter_signals.py  test_extract_review_signals.py  test_geocode_pending.py  test_get_site_detail.py  test_ingest_snapshot.py  test_rebuild_graph.py  test_semantic_search.py
crawl/camfit/: .gitignore  README.md  pyproject.toml
crawl/camfit/scripts/: _state_audit.py  cf_dedup_to_csv.py  cf_grab.py  cf_inspect_api.py  cf_inspect_detail.py  cf_inspect_filters.py  cf_inspect_region_filter.py  cf_pull_browser_targeted.py  cf_pull_collections.py  cf_pull_details.py  cf_pull_expanded.py  cf_pull_remaining.py  cf_pull_themes.py  cf_pull_via_scroll.py  cf_search_inspect.py  fetch_cf_home_scrapling.py  summarize_camfit_snapshot.py
crawl/camfit/src/camfit_crawl/: __init__.py  cli.py  crawler.py  csv_writer.py  etago_adapter.py  models.py  parser.py  stealth.py
crawl/camfit/tests/: smoke_etago_geo.py  test_crawler_respx.py  test_csv_writer.py  test_etago_adapter.py  test_parser.py  test_stealth.py
crawl/txcp/: .gitignore  README.md  pyproject.toml
crawl/txcp/src/tkcp_crawl/: adapter.py  cli.py  stealth.py
crawl/txcp/src/txcp_crawl/: __init__.py  adapter.py  cli.py  crawler.py  csv_writer.py  detail.py  fetcher.py  models.py  settings.py  state.py  stealth.py
crawl/txcp/tests/: smoke_tkcp_real.py  smoke_txcp_real.py  test_crawler_respx.py  test_csv_writer.py  test_dedup.py  test_detail_parser.py  test_models.py  test_parser.py  test_stealth.py
pipeline/: README.md  pyproject.toml
pipeline/src/cf_be_api/: __init__.py
pipeline/src/cf_be_api/adapters/: etago_bin.py
pipeline/src/cf_be_api/ports/: embed.py  repo.py
pipeline/src/cf_be_api/usecases/: build_embeddings.py  discover_synonyms.py  eta_for_fleet.py  extract_desc_signals.py  geocode_pending.py  get_site_detail.py
pipeline/src/cf_pipeline/: __init__.py  _cli_legacy.py  cycle.py  derive_lexicon.py  full_run.py  geocode_run.py  ingest_camps.py  load_rich.py  seed_concepts.py  seed_filter_mapping.py
pipeline/tests/: test_full_run_dry.py
pipeline/tests-be-api-legacy/contract/vector/: test_index_contract.py
pipeline/tests-be-api-legacy/unit/: test_embed_text.py
pipeline/tests-be-api-legacy/unit/usecases/: test_build_embeddings.py  test_build_vocabulary.py  test_extract_filter_signals.py  test_semantic_search.py
(+396 files in other folders)
