[project]
name = "cf-workspace"
version = "0.0.0"
description = "cf monorepo — crawl/{camfit,txcp} + backend + pipeline (uv workspace root, not published)"
requires-python = ">=3.11"

[tool.uv.workspace]
# SP-D D-9 (2026-05-11): backend/be-api-py/ removed — cf_be_api absorbed into
# pipeline (pipeline/src/cf_be_api), so cf-pipeline ships both packages and is
# self-contained. backend/ now holds only the Go runtime (be-api/) and the
# Python BFF (be-for-fe/).
members = ["crawl/txcp", "crawl/camfit", "backend/be-for-fe", "pipeline"]

[tool.uv.sources]
cf-be-for-fe = { workspace = true }
