[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camfit-puller"
version = "0.1.0"
description = "Polite camfit.co.kr camping list crawler with FalkorDB knowledge graph + PostgreSQL row store + huashu-design FE"
requires-python = ">=3.11"
authors = [{ name = "cxx_2" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "lxml>=5.2",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "falkordb>=1.0.10",
    "rich>=13.7",
    "loguru>=0.7",
    "tenacity>=8.2",
    "psycopg[binary,pool]>=3.2",
    "sqlalchemy>=2.0",
    "pgvector>=0.3.0",
    "alembic>=1.13",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "numpy>=1.26",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44"]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "respx>=0.21"]
testcontainers = ["testcontainers[postgres]>=4.7"]

[project.scripts]
camfit-puller = "camfit_puller.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/camfit_puller"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests that require a live docker stack (deselect with '-m not integration')",
]
