[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cf-be-api-py"
version = "0.1.0"
description = "cf be-api Python core — domain / ports / usecases / adapters + alembic. Library-only (HTTP layer is now Go: backend/be-api/). Consumed by cf-pipeline CLI tooling."
requires-python = ">=3.11"
authors = [{ name = "cxx_2" }]
license = { text = "MIT" }
readme = "README.md"

# Python package name remains `cf_be_api` for import-path stability — only the
# distribution name changed from cf-be-api → cf-be-api-py during SP-D D-8
# cutover, when the FastAPI runtime (api.py) was deleted in favour of the Go
# binary at backend/be-api/.
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # FastAPI/uvicorn dropped — HTTP runtime is now Go.
    "falkordb>=1.0.10",
    "rich>=13.7",
    "loguru>=0.7",
    "tenacity>=8.2",
    "psycopg[binary,pool]>=3.2",
    "sqlalchemy>=2.0",
    "pgvector>=0.3.0",
    "alembic>=1.13",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "lxml>=5.2",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "respx>=0.21"]
testcontainers = ["testcontainers[postgres]>=4.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/cf_be_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests that require a live docker stack",
]
