[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cf-be-api"
version = "0.1.0"
description = "cf be-api — FastAPI + DI + clean-arch (domain / ports / usecases / adapters) + DB stack. Internal DB-tier."
requires-python = ">=3.11"
authors = [{ name = "cxx_2" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "falkordb>=1.0.10",
    "rich>=13.7",
    "loguru>=0.7",
    "tenacity>=8.2",
    "psycopg[binary,pool]>=3.2",
    "sqlalchemy>=2.0",
    "pgvector>=0.3.0",
    "alembic>=1.13",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "lxml>=5.2",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "respx>=0.21"]
testcontainers = ["testcontainers[postgres]>=4.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/cf_be_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests that require a live docker stack",
]
