[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cf-be-for-fe"
version = "0.1.0"
description = "cf BFF — projection + aggregation over cf-be-api. Externally exposed."
requires-python = ">=3.11"
authors = [{ name = "cxx_2" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # SP-D D-8 cutover: cf-be-api removed — be-api is now the Go binary at
    # backend/be-api/. BFF talks to it over HTTP only (BFF_BE_API_BASE_URL).
    # The one Python symbol BFF used (FEATURED_AXES) is now inlined into
    # cf_be_for_fe/projection.py.
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "respx>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/cf_be_for_fe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
