[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camfit-crawl"
version = "0.1.0"
description = "Polite camfit.co.kr camping list crawler — sibling of txcp-crawl."
requires-python = ">=3.11"
authors = [{ name = "cxx_2" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "lxml>=5.2",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "loguru>=0.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "respx>=0.21"]
playwright = ["playwright>=1.44"]

[project.scripts]
camfit-crawl = "camfit_crawl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/camfit_crawl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring docker stack",
    "live: requires live network",
]
